--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/public/images/favicon.ico"/>
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/public/images/MATRIFY-removebg-preview (1).png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matrify</title>
   </head>
