Changed landing UI

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" sizes="64x64" href="/public/images/MATRIFY-removebg-preview (1).png"/>
+    <link rel="icon" type="image/svg+xml" sizes="64x64" href="/images/matriim-01.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matrify</title>
   </head>
